delete button created

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,8 @@
             
             <label class="sr-only" for="idPlace">Número da tarefa a ser editada</label>
             <input id="new-task-input-id" type="text" name="id"></input>
-            <input type="submit" id="new-task-submit" value="Editar tarefa"/>
+            
+            <button id="new-task-button">Editar Tarefa</button>
 
         </form>
     </header>
